--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ body {
   padding: 40px 50px;
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .hero nav {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -45,7 +45,7 @@ body {
   }
 }
 
-@media (min-width: 425px) and (max-width: 599px) {
+@media (min-width: 479px) and (max-width: 767px) {
   .hero nav {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -62,13 +62,13 @@ body {
   width: 33.3%;
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .hero nav .nav-block {
     width: 100%;
   }
 }
 
-@media (min-width: 425px) and (max-width: 599px) {
+@media (min-width: 479px) and (max-width: 767px) {
   .hero nav .nav-block {
     width: 100%;
   }
@@ -80,7 +80,7 @@ body {
   display: flex;
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .hero nav .navlinks {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -95,7 +95,7 @@ body {
   }
 }
 
-@media (min-width: 425px) and (max-width: 599px) {
+@media (min-width: 479px) and (max-width: 767px) {
   .hero nav .navlinks {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -114,19 +114,19 @@ body {
   margin: 0 70px;
 }
 
-@media (min-width: 900px) and (max-width: 1200px) {
+@media (min-width: 901px) and (max-width: 1200px) {
   .hero nav .navlinks .about {
     margin: 0 40px;
   }
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .hero nav .navlinks .about {
     margin: 0;
   }
 }
 
-@media (min-width: 425px) and (max-width: 599px) {
+@media (min-width: 479px) and (max-width: 767px) {
   .hero nav .navlinks .about {
     margin: 0;
   }
@@ -152,7 +152,7 @@ body {
   width: 100%;
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .hero nav .drop {
     overflow: hidden;
     height: 0;
@@ -161,7 +161,7 @@ body {
   }
 }
 
-@media (min-width: 425px) and (max-width: 599px) {
+@media (min-width: 479px) and (max-width: 767px) {
   .hero nav .drop {
     overflow: hidden;
     height: 0;
@@ -170,13 +170,13 @@ body {
   }
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .hero nav .open {
     height: auto;
   }
 }
 
-@media (min-width: 425px) and (max-width: 599px) {
+@media (min-width: 479px) and (max-width: 767px) {
   .hero nav .open {
     height: auto;
   }
@@ -186,13 +186,13 @@ body {
   display: none;
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .hero nav .book {
     display: block;
   }
 }
 
-@media (min-width: 425px) and (max-width: 599px) {
+@media (min-width: 479px) and (max-width: 767px) {
   .hero nav .book {
     display: block;
   }
@@ -211,7 +211,7 @@ body {
   font-family: "Lexend Deca";
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .hero nav .logo-text {
     -webkit-box-ordinal-group: 2;
         -ms-flex-order: 1;
@@ -226,7 +226,7 @@ body {
   }
 }
 
-@media (min-width: 425px) and (max-width: 599px) {
+@media (min-width: 479px) and (max-width: 767px) {
   .hero nav .logo-text {
     -webkit-box-ordinal-group: 2;
         -ms-flex-order: 1;
@@ -258,7 +258,7 @@ body {
   transition: all 0.3s ease;
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .hero nav .logo-text .menu-btn {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -272,7 +272,7 @@ body {
   }
 }
 
-@media (min-width: 425px) and (max-width: 599px) {
+@media (min-width: 479px) and (max-width: 767px) {
   .hero nav .logo-text .menu-btn {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -309,13 +309,13 @@ body {
   display: flex;
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .hero .booking-block {
     display: none;
   }
 }
 
-@media (min-width: 425px) and (max-width: 599px) {
+@media (min-width: 479px) and (max-width: 767px) {
   .hero .booking-block {
     display: none;
   }
@@ -328,13 +328,13 @@ body {
   margin-left: auto;
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .hero .booking-block .navlink {
     margin-left: 0;
   }
 }
 
-@media (min-width: 425px) and (max-width: 599px) {
+@media (min-width: 479px) and (max-width: 767px) {
   .hero .booking-block .navlink {
     margin-left: 0;
   }
@@ -364,7 +364,7 @@ body {
   padding-top: 80px;
 }
 
-@media (min-width: 425px) and (max-width: 599px) {
+@media (min-width: 479px) and (max-width: 767px) {
   .hero .header .header-top {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -384,13 +384,13 @@ body {
   z-index: 3;
 }
 
-@media (min-width: 900px) and (max-width: 1200px) {
+@media (min-width: 901px) and (max-width: 1200px) {
   .hero .header .header-top .header-text {
     max-width: 30vw;
   }
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .hero .header .header-top .header-text {
     font-size: 24px;
     line-height: 30px;
@@ -414,7 +414,7 @@ body {
   left: -6.2vw;
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .hero .header .header-top .header-image .left {
     width: 16.6vw;
     height: 16.8vw;
@@ -428,7 +428,7 @@ body {
   right: -8.2vw;
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .hero .header .header-top .header-image .right {
     width: 17.4vw;
     height: 14.7vw;
@@ -443,7 +443,7 @@ body {
   right: -6.9vw;
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .hero .header .header-top .header-image .bottom {
     width: 18.45vw;
     height: 15.7vw;
@@ -458,7 +458,7 @@ body {
   z-index: 2;
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .hero .header .header-top .header-image .girl-image {
     width: 32vw;
     height: 40vw;
@@ -500,13 +500,13 @@ body {
   margin-left: 36px;
 }
 
-@media (min-width: 900px) and (max-width: 1200px) {
+@media (min-width: 901px) and (max-width: 1200px) {
   .hero .header .header-top .header-right .right-text {
     max-width: 15vw;
   }
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .hero .header .header-top .header-right .right-text {
     max-width: 20vw;
   }
@@ -550,14 +550,14 @@ body {
   position: relative;
 }
 
-@media (min-width: 900px) and (max-width: 1200px) {
+@media (min-width: 901px) and (max-width: 1200px) {
   .hero .header .header-bottom .hero-text {
     margin: 0 40px;
     margin-top: 6vw;
   }
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .hero .header .header-bottom .hero-text {
     margin: 0 30px;
     margin-top: 2vw;
@@ -571,7 +571,7 @@ body {
   font-family: "Lexend Deca";
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .hero .header .header-bottom .hero-text .header-text {
     font-size: 25px;
   }
@@ -584,7 +584,7 @@ body {
   margin-top: 20px;
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .hero .header .header-bottom .hero-text .right-text {
     margin-top: 10px;
   }
@@ -596,13 +596,13 @@ body {
   margin-bottom: -7vw;
 }
 
-@media (min-width: 900px) and (max-width: 1200px) {
+@media (min-width: 901px) and (max-width: 1200px) {
   .hero .header .header-bottom .right {
     margin-top: 7vw;
   }
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .hero .header .header-bottom .right {
     margin-top: 4vw;
   }
@@ -615,7 +615,7 @@ body {
   height: 36.8vw;
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .hero .header .header-bottom .right .flower {
     height: 38vw;
   }
@@ -629,13 +629,13 @@ body {
   height: 25.6vw;
 }
 
-@media (min-width: 900px) and (max-width: 1200px) {
+@media (min-width: 901px) and (max-width: 1200px) {
   .hero .header .header-bottom .right .swirl-right {
     top: 30%;
   }
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .hero .header .header-bottom .right .swirl-right {
     top: 30%;
   }
@@ -659,7 +659,7 @@ body {
           align-items: center;
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .main .main-left {
     width: 70%;
   }
@@ -690,14 +690,14 @@ body {
   margin: 0 56px;
 }
 
-@media (min-width: 900px) and (max-width: 1200px) {
+@media (min-width: 901px) and (max-width: 1200px) {
   .main .main-left .main-text {
     max-width: 45%;
     margin: 0 40px;
   }
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .main .main-left .main-text {
     margin: 0 40px;
     max-width: 40%;
@@ -714,14 +714,14 @@ body {
   position: relative;
 }
 
-@media (min-width: 900px) and (max-width: 1200px) {
+@media (min-width: 901px) and (max-width: 1200px) {
   .main .main-left .main-text .header-text {
     font-size: 48px;
     line-height: 58px;
   }
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .main .main-left .main-text .header-text {
     font-size: 35px;
     line-height: 40px;
@@ -735,7 +735,7 @@ body {
   margin-top: 40px;
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .main .main-left .main-text .right-text {
     margin-top: 25px;
   }
@@ -748,7 +748,7 @@ body {
   margin-bottom: -7vw;
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .main .main-right {
     width: 30%;
   }
@@ -831,7 +831,7 @@ body {
   height: 22.5vw;
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .services-wrapper .services-block .hairstyle-block .cut .cut-image {
     width: 15vw;
     height: 26.5vw;
@@ -848,7 +848,7 @@ body {
   margin-top: 30px;
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .services-wrapper .services-block .hairstyle-block .cut .cut-text {
     font-size: 25px;
   }
@@ -865,7 +865,7 @@ body {
   margin-bottom: 30px;
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .services-wrapper .services-block .hairstyle-block .color .color-text {
     font-size: 25px;
   }
@@ -882,7 +882,7 @@ body {
   height: 37.9vw;
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .services-wrapper .services-block .hairstyle-block .color .color-block .color-img {
     width: 15vw;
     height: 43.9vw;
@@ -898,13 +898,13 @@ body {
   z-index: 4;
 }
 
-@media (min-width: 900px) and (max-width: 1200px) {
+@media (min-width: 901px) and (max-width: 1200px) {
   .services-wrapper .services-block .hairstyle-block .color .color-block .color-img .color-description {
     min-width: 25vw;
   }
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .services-wrapper .services-block .hairstyle-block .color .color-block .color-img .color-description {
     min-width: 25vw;
   }
@@ -914,13 +914,13 @@ body {
   font-size: 38px;
 }
 
-@media (min-width: 900px) and (max-width: 1200px) {
+@media (min-width: 901px) and (max-width: 1200px) {
   .services-wrapper .services-block .hairstyle-block .color .color-block .color-img .color-description .desc {
     font-size: 30px;
   }
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .services-wrapper .services-block .hairstyle-block .color .color-block .color-img .color-description .desc {
     font-size: 24px;
   }
@@ -978,7 +978,7 @@ body {
   position: relative;
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .services-wrapper .services-block .hairstyle-block .braid .braid-img {
     width: 15vw;
     height: 30.5vw;
@@ -1011,7 +1011,7 @@ body {
   margin-top: 30px;
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .services-wrapper .services-block .hairstyle-block .braid .braid-text {
     font-size: 25px;
   }
@@ -1028,7 +1028,7 @@ body {
   letter-spacing: 2px;
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .services-wrapper .important {
     font-size: 14px;
   }
@@ -1075,7 +1075,7 @@ body {
   margin-bottom: 20px;
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .passion .passion-inner .passion-title {
     font-size: 48px;
   }
@@ -1087,7 +1087,7 @@ body {
   line-height: 24px;
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .passion .passion-inner .passion-text {
     max-width: 65%;
     line-height: 20px;
@@ -1196,14 +1196,14 @@ body {
   height: 18vw;
 }
 
-@media (min-width: 900px) and (max-width: 1200px) {
+@media (min-width: 901px) and (max-width: 1200px) {
   .appointment-container .appointment-block .right-block .image-cont {
     width: 22vw;
     height: 19vw;
   }
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .appointment-container .appointment-block .right-block .image-cont {
     width: 24vw;
     height: 19vw;
@@ -1219,13 +1219,13 @@ body {
   max-width: 16.4vw;
 }
 
-@media (min-width: 900px) and (max-width: 1200px) {
+@media (min-width: 901px) and (max-width: 1200px) {
   .appointment-container .appointment-block .right-block .desc-container {
     max-width: 20vw;
   }
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .appointment-container .appointment-block .right-block .desc-container {
     max-width: 22vw;
   }
@@ -1238,13 +1238,13 @@ body {
   margin-top: 7vw;
 }
 
-@media (min-width: 900px) and (max-width: 1200px) {
+@media (min-width: 901px) and (max-width: 1200px) {
   .appointment-container .appointment-block .right-block .desc-container .best-self {
     font-size: 28px;
   }
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .appointment-container .appointment-block .right-block .desc-container .best-self {
     font-size: 23px;
     line-height: 30px;
@@ -1296,6 +1296,18 @@ body {
           justify-content: space-between;
 }
 
+@media (min-width: 768px) and (max-width: 900px) {
+  .footer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+  }
+}
+
 .footer .footer-items {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1305,12 +1317,6 @@ body {
 
 .footer .footer-items .footer-block {
   margin-right: 75px;
-}
-
-@media (min-width: 600px) and (max-width: 899px) {
-  .footer .footer-items .footer-block {
-    margin-right: 30px;
-  }
 }
 
 .footer .footer-items .footer-block .footer-inner {
@@ -1336,6 +1342,12 @@ body {
   font-size: 25px;
 }
 
+@media (min-width: 768px) and (max-width: 900px) {
+  .footer .apply-block {
+    padding-top: 30px;
+  }
+}
+
 .footer .apply-inner {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1344,6 +1356,14 @@ body {
       -ms-flex-pack: end;
           justify-content: end;
   margin-top: 20px;
+}
+
+@media (min-width: 768px) and (max-width: 900px) {
+  .footer .apply-inner {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+  }
 }
 
 .footer .apply-inner .applylink {
@@ -1356,7 +1376,7 @@ body {
   color: #F95454;
 }
 
-@media (min-width: 600px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 900px) {
   .footer .apply-inner .applylink .link {
     font-size: 22px;
   }
